--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/JekEugene/nodejs-react-forum#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6"
   }
